fix: remove shadow, background &  radius in favor of paper wrapping

--- a/source/sass/component/_testimonials.scss
+++ b/source/sass/component/_testimonials.scss
@@ -28,10 +28,7 @@
     display: grid;
     grid-template-columns: calc(#{$base} * 10) auto;
     grid-template-areas: "image header" "quote quote";
-    background-color: $color-lightest;
     padding: map-get($spacers, "4");
-    border-radius: calc(#{$base} * 0.5);
-    @include shadow(0.5);
 
     .c-testimonial__image {
         width: calc(#{$base} * 10);
